--- a/style.css
+++ b/style.css
@@ -13,7 +13,15 @@ body {
 
 .nav-links > li {
   float: left;
-  margin-right: 2em;
+  margin-right: 1.5em;
+}
+
+.nav-links > li.active {
+  opacity: 0.5
+}
+
+.nav-links > li:last-of-type {
+  margin-right: 0px;
 }
 
 .nav-links > li:hover {
