--- a/style.css
+++ b/style.css
@@ -6,25 +6,33 @@ body {
   width: 250px;
 }
 
-.nav-links {
+section {
+  display: none;
+}
+
+section.active {
+  display: block;
+}
+
+#nav-links {
   list-style-type: none;
   padding: 0px;
 }
 
-.nav-links > li {
+#nav-links > li {
   float: left;
   margin-right: 1.5em;
 }
 
-.nav-links > li.active {
+#nav-links > li.active {
   opacity: 0.5
 }
 
-.nav-links > li:last-of-type {
+#nav-links > li:last-of-type {
   margin-right: 0px;
 }
 
-.nav-links > li:hover:not(.active) {
+#nav-links > li:hover:not(.active) {
   cursor: pointer;
   user-select: none;
   text-decoration: underline;
